changed configuration of maven plugin in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -81,9 +81,10 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <systemPropertyVariables>
-                        <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
-                    </systemPropertyVariables>
+                    <destFile>target/jacoco.exec</destFile>
+                    <!--<systemPropertyVariables>-->
+                        <!--<jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>-->
+                    <!--</systemPropertyVariables>-->
                 </configuration>
             </plugin>
 
